--- a/sructure/structureGogo.css
+++ b/sructure/structureGogo.css
@@ -7,6 +7,11 @@
   text-decoration: none;
   color: black;
 }
+
+* li {
+  list-style-type: none;
+}
+
 .container {
   margin: auto;
   max-width: 1200px;
@@ -21,8 +26,10 @@
   display: flex;
 }
 .headerLogo {
-  background-color: grey;
-  width: 10%;
+  background-image: url(../images/gogo-logo.png);
+  background-position: center;
+  background-size: cover;
+  width: 15%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -30,15 +37,23 @@
 }
 .dropDnMenu {
   background-color: rgb(140, 114, 114);
-  width: 60%;
+  width: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: white;
+color: white;
 }
+.dropdownContent {
+  display: none;
+}
+
+.dropDnBtn:hover .dropdownContent{
+  display: block;
+}
+
 .finder {
   background-color: rgb(116, 94, 94);
-  width: 10%;
+  width: 5%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,7 +61,7 @@
 }
 .headerRt {
   background-color: rgb(128, 80, 80);
-  width: 20%;
+  width: 30%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -203,15 +218,16 @@
   display: flex;
   flex-direction: row;
   margin-top: 20px auto;
+  gap: 15px;
 }
 
 .headerCard1 {
-  width: 24%;
+  width: 22%;
   height: 300px;
   display: flex;
   flex-direction: column;
   width: 300px;
-  height: 400px;
+  height: 300px;
 }
 
 .headerCard1Img {
@@ -247,7 +263,7 @@
 }
 
 .headerCardsText {
-  padding-top: 20px;
+  padding-top: 5px;
 }
 .headerCardsText a:hover {
   color: rgb(93, 91, 91);
@@ -256,7 +272,7 @@
 
 .headerCardsShare {
   display: flex;
-  padding-top: 20px;
+  padding-top: 5px;
   gap: 30px;
 }
 
@@ -359,7 +375,7 @@
 .dateNews {
   width: 100%;
   height: auto;
-  background-color: lightgrey;
+  /* background-color: lightgrey; */
   display: flex;
 }
 /* DATE NEWS LEFT */
@@ -367,7 +383,7 @@
 .dateNewsLeft {
   width: 70%;
   height: auto;
-  background-color: rgb(144, 139, 139);
+  /* background-color: rgb(144, 139, 139); */
   /* display: flex; */
 }
 
@@ -542,7 +558,7 @@ i {
 .dateNewsRight {
   width: 300px;
   height: auto;
-  background-color: rgb(144, 139, 139);
+  /* background-color: rgb(144, 139, 139); */
   margin-left: 30px;
   color: white;
 }
@@ -554,15 +570,15 @@ i {
   width: 300px;
   display: flex;
   align-items: center;
-  background-color: rgb(66, 64, 64);
+  /* background-color: rgb(66, 64, 64); */
   gap: 15px;
 }
 
 .hotNews1 {
   margin-top: 20px;
-  background-color: rgb(66, 64, 64);
+  /* background-color: rgb(66, 64, 64); */
   width: 300px;
-  height: 200px;
+  height: 300px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -578,11 +594,12 @@ i {
   background-repeat: no-repeat;
   border-radius: 5px;
   transition: all 0.5s ease-in-out;
+  display: flex;
 }
 
-.hotNews1 a {
+.hotNews1Img a {
   height: 200px;
-  width: auto;
+  width: 300px;
   background-color: rgba(52, 73, 94, 0.75);
   border-radius: 5px;
   display: flex;
@@ -599,6 +616,26 @@ i {
   transition: all 0.5s ease-in-out;
 }
 
+.hotNews1Cont {
+  width: 300px;
+  height: 100px;
+  margin-top: 10px;
+}
+
+.hotNews1ContText {
+  cursor: pointer;
+}
+
+.hotNews1Icon {
+  display: flex;
+  height: 30px;
+  gap: 10px;
+  margin-top: 5px;
+}
+.hotNews1Icon a {
+  color: var(--theThird);
+}
+
 /* TREND NEWS */
 
 .trendNews {
@@ -607,39 +644,73 @@ i {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: rgb(66, 64, 64);
+  background-color: #fefaf6;
+  margin-left: -30px;
+  padding-top: ;
 }
 
 .trendNewsTitle {
-  height: 30px;
+  height: 50px;
   display: flex;
-  width: 100%;
-  flex-direction: column;
+  width: 330px;
+  color: black;
+}
+.trendNewsTitleImg {
+  width: 35px;
+  background-image: url(../images/trendNewsImg.png);
+  background-repeat: no-repeat;
+  background-size: contain;
   align-items: center;
-  justify-content: center;
-  background-color: rgb(66, 64, 64);
-  border-bottom: dotted 1px white;
+}
+
+.trendNewsTitleText {
+  display: flex;
+  align-items: center;
 }
 
 .trendNews1 {
-  margin-top: 20px;
-  border-bottom: dotted 1px white;
-  width: 100%;
+  width: 330px;
   height: 150px;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: rgb(66, 64, 64);
+  /* background-color: #FEFAF6; */
   border-bottom: dotted 1px white;
+  padding: 15px 0;
+  color: black;
+  cursor: pointer;
+  transition: all 0.3s ease-in-out;
+}
+
+.trendNews1:hover {
+  scale: 103%;
+  transition: all 0.3s ease-in-out;
+}
+
+.trendNumber h1 {
+  font-size: 50px;
+  padding: 0 10px;
+  color: #e00134;
+}
+.trendText {
+  padding: 0 5px;
+  line-height: 20px;
+}
+.trendIcon {
+  display: flex;
+  gap: 10px;
+  padding-top: 10px;
+}
+
+.trendIcon a {
+  color: var(--theThird);
 }
 
 /* INTROVIEW */
 
 .introview {
   margin: 30px auto;
-  width: 100%;
+  width: 1200px;
   height: 600px;
-  background-color: rgb(180, 173, 173);
+  /* background-color: rgb(180, 173, 173); */
   display: flex;
   justify-content: space-between;
 }
@@ -647,12 +718,38 @@ i {
 .introviewHL {
   width: 50%;
   height: 600px;
-  background-color: rgb(120, 115, 115);
+  cursor: pointer;
+}
+
+.introviewHLImg {
+  background-image: url(../images/introviewHLImg.jpeg);
+  background-size: cover;
   border-radius: 1%;
+  width: 100%;
+  height: 600px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: flex-end;
+  flex-direction: column;
+  padding: 0 25px 25px 25px;
   color: white;
+}
+
+.introviewHLImg h2 {
+  color: white;
+}
+
+.HLLine {
+  border-bottom: 1px solid var(--theThird);
+  margin-top: 10px;
+}
+
+.HLViewmore {
+  margin-top: 10px;
+}
+
+.introviewHL:hover .introviewHLImg {
+  background-size: 170%;
+  transition: all 0.5s ease-in-out;
 }
 
 .introviewRight {
@@ -666,12 +763,44 @@ i {
 .introviewCards1 {
   width: 290px;
   height: 295px;
+  border-radius: 1%;
+}
+
+.introviewCards1Img {
+  background-image: url(../images/introviewCard1.jpeg);
+  width: 290px;
+  height: 295px;
+  background-size: cover;
+  background-position: center;
+  padding: 0 20px;
+  padding-bottom: 10px;
+  display: flex;
+  align-items: flex-end;
+  text-wrap: wrap;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.introviewCards1:hover .introviewCards1Img {
+  background-size: 170%;
+  transition: all 0.5s ease-in-out;
+}
+
+.introCat p {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgb(120, 115, 115);
-  border-radius: 1%;
+  width: 100px;
+  height: 25px;
+  border-radius: 5px;
+  background-color: var(--primary);
   color: white;
+  margin-bottom: 5px;
+}
+
+.introText p {
+  color: white;
+  font-size: 17px;
 }
 
 /* TECH */
