--- a/styles/global.css
+++ b/styles/global.css
@@ -10,7 +10,12 @@ a {
   color: black;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
 }
 
@@ -26,4 +31,3 @@ h1,h2,h3,h4,h5,h6 {
   --secondary: #04509e;
   --theThird: #c8c6c3;
 }
-
